--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
         <main id="aboutme">
 
             <h1>Portfolio</h1>
-            <h2>2024</h2> 
+            <h2>2025</h2> 
 
             <hr>
             
             <img src="/pictures/Moi-pp.png" alt="Photo portrait  de Thomas Garénaux">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
 
             <hr>
 
