--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
                     <li><a href="/illustration.html">Illustrations</a></li>
                     <li><a href="/graphisme.html">Graphismes</a></li>
                     <li><a href="/photography.html">Photographies</a></li>
+                    <li><a href="">Contacts</a></li>
                 </ul>
             </nav>
 
