--- a/illustration.html
+++ b/illustration.html
@@ -26,6 +26,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Accueil</a></li>
+                    <li><a href="">Illustrations</a></li>
                     <li><a href="/graphisme.html">Graphismes</a></li>
                     <li><a href="/photography.html">Photographies</a></li>
                     <li><a href="/contact.html">Contacts</a></li>
@@ -63,7 +64,7 @@
 
                         <figure class="grid-item" id="maeve"><img src="pictures/galleryillust/maeve.jpg" alt="illustration de Maeve Thomas Garénaux @RDrabbit1205" class="grid-img"></figure>
 
-                        <figure class="grid-item" id="cyberpunk-girl"><img src="pictures/galleryillust/Cyberpunk-girl.jpg" alt="cyberpunk-girl" class="grid-img"></figure>
+                        <figure class="grid-item" id="Cyberpunk-girl"><img src="pictures/galleryillust/Cyberpunk-girl.jpg" alt="Cyberpunk-girl" class="grid-img"></figure>
 
                         <figure class="grid-item" id="blade-runner"><img src="pictures/galleryillust/blade-runner.jpg" alt="illustration de Thomas style blade-runner Thomas Garénaux @RDrabbit1205" class="grid-img"></figure>
             
