--- a/photography.html
+++ b/photography.html
@@ -55,6 +55,12 @@
                         
                         <div class="grid-item3" id="sky"><img src="pictures/galleryphoto/sky.jpg" alt="Photo levée de soleil" class="grid-img3"></div>
 
+                        <div class="grid-item3" id="meduse"><img src="pictures/galleryphoto/meduse.jpg" alt="Photo meduse Nausica" class="grid-img3"></div>
+
+                        <div class="grid-item3" id="thomas"><img src="pictures/galleryphoto/thomas.jpg" alt="Photo de Thomas dans un champs de Colza" class="grid-img3"></div>
+
+                        <div class="grid-item3" id="fish"><img src="pictures/galleryphoto/fish.jpg" alt="Photo aquarium poisson" class="grid-img3"></div>
+
                     </div>
                 </div>
             </section>
