--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Accueil</a></li>
-                    <li><a href="/illustration.html">Illustrations</a></li>
-                    <li><a href="/graphisme.html">Graphismes</a></li>
-                    <li><a href="/photography.html">Photographies</a></li>
+                    <li><a href="/creations.html">Réalisations</a></li>
                     <li><a href="">Contacts</a></li>
                 </ul>
             </nav>
